<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/first"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_palinsesto"
            android:icon="@drawable/ic_calendar"
            android:title="@string/nav_palinsesto" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/nav_messaggi"
            android:icon="@drawable/ic_chat"
            android:title="@string/nav_messaggi" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_menu_team"
            android:title="Team" />
        <item
            android:id="@+id/nav_seguici"
            android:icon="@drawable/ic_follow_us"
            android:title="@string/nav_seguici" />
    </group>


    <group
        android:id="@+id/second"
        android:checkableBehavior="none">
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
    </group>


</menu>
